k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bookstore
  labels:
    name: bookstore
    environment: production
